--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -40,6 +40,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:layout_centerVertical="true"
                         android:text="来份烤肉拌饭"
                         android:textColor="@color/colorTex"
                         android:textSize="18sp" />
@@ -49,6 +50,7 @@
                         android:layout_width="110dp"
                         android:layout_height="28dp"
                         android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:background="@drawable/rect"
                         android:gravity="center"
                         android:text="待配送"
@@ -63,38 +65,53 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/item_time_bg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/little_time" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/item_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center_vertical"
-                    android:text="20min/2017-5-7 19:00"
-                    android:textColor="@color/colorTex"
-                    android:textSize="18sp" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="10dp">
 
-                <ImageView
-                    android:id="@+id/item_money_bg"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginLeft="60dp"
-                    android:background="@drawable/little_money" />
+                        <ImageView
+                            android:id="@+id/item_money_bg"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:background="@drawable/little_money" />
 
-                <TextView
-                    android:id="@+id/item_money"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
-                    android:text="5元"
-                    android:textColor="@color/colorTex"
-                    android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/item_money"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="5dp"
+                            android:text="5元"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/item_time_bg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/little_time" />
+
+                    <TextView
+                        android:id="@+id/item_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="20min/2017-5-7 19:00"
+                        android:textColor="@color/colorTex"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/item_time_bg"
+                        android:layout_toEndOf="@+id/item_time_bg" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -102,9 +119,8 @@
                 android:id="@+id/view4"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/colordevider"
-                android:padding="16dp" />
+                android:layout_marginTop="5dp"
+                android:background="@color/colordevider" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -112,38 +128,46 @@
                 android:layout_marginTop="3dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/item_map_bg"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:background="@drawable/little_des" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/item_shop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
-                    android:text="下沉广场烤肉拌饭"
-                    android:textColor="@color/colorTex"
-                    android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/item_shop"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/item_map_bg"
+                        android:text="下沉广场烤肉拌饭"
+                        android:textColor="@color/colorTex"
+                        android:textSize="18sp" />
 
-                <ImageView
-                    android:id="@+id/item_next_bg"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginLeft="15dp"
-                    android:background="@drawable/little_toward" />
+                    <ImageView
+                        android:id="@+id/item_next_bg"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_toRightOf="@+id/item_shop"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/little_toward" />
 
-                <TextView
-                    android:id="@+id/item_des"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="15dp"
-                    android:text="16号楼512"
-                    android:textColor="@color/colorTex"
-                    android:textSize="18sp" />
+                    <ImageView
+                        android:id="@+id/item_map_bg"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:background="@drawable/little_des" />
+
+                    <TextView
+                        android:id="@+id/item_des"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:text="16号楼512"
+                        android:layout_toRightOf="@+id/item_next_bg"
+                        android:textColor="@color/colorTex"
+                        android:textSize="18sp" />
+                </RelativeLayout>
 
             </LinearLayout>
 
