--- a/app/src/main/res/layout/myorder_item.xml
+++ b/app/src/main/res/layout/myorder_item.xml
@@ -11,7 +11,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="141dp"
+        android:background="@drawable/card_light">
 
         <LinearLayout
             android:id="@+id/myorder_item"
@@ -45,6 +46,7 @@
                             android:id="@+id/myorder_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
                             android:layout_marginLeft="10dp"
                             android:text="来份烤肉拌饭"
                             android:textColor="@color/colorTex"
@@ -69,38 +71,51 @@
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/myorder_time_bg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/little_time" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/myorder_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:text="20min/2017-5-7 19:00"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="10dp"
+                            android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/myorder_money_bg"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginLeft="50dp"
-                        android:background="@drawable/little_money" />
+                            <ImageView
+                                android:id="@+id/myorder_money_bg"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:background="@drawable/little_money" />
 
-                    <TextView
-                        android:id="@+id/myorder_money"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:text="5元"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                            <TextView
+                                android:id="@+id/myorder_money"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="5dp"
+                                android:text="5元"
+                                android:textColor="@color/colorTex"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/myorder_time_bg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/little_time" />
+
+                        <TextView
+                            android:id="@+id/myorder_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/myorder_time_bg"
+                            android:layout_marginLeft="5dp"
+                            android:text="20min/2017-5-7 19:00"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -108,48 +123,55 @@
                     android:id="@+id/view4"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@color/colordevider"
-                    android:padding="16dp" />
+                    android:layout_marginTop="5dp"
+                    android:background="@color/colordevider" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="3dp"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView13"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:background="@drawable/little_des" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/myorder_shop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:text="下沉广场烤肉拌饭"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/myorder_shop"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/imageView13"
+                            android:layout_marginLeft="5dp"
+                            android:text="下沉广场烤肉拌饭"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
 
-                    <ImageView
-                        android:id="@+id/imageView15"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginLeft="15dp"
-                        android:background="@drawable/little_toward" />
+                        <ImageView
+                            android:id="@+id/imageView13"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:background="@drawable/little_des" />
 
-                    <TextView
-                        android:id="@+id/myorder_des"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="15dp"
-                        android:text="16号楼512"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/myorder_des"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/imageView15"
+                            android:layout_marginLeft="15dp"
+                            android:text="16号楼512"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:id="@+id/imageView15"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_toRightOf="@+id/myorder_shop"
+                            android:background="@drawable/little_toward" />
+                    </RelativeLayout>
 
                 </LinearLayout>
 
