--- a/app/src/main/res/layout/order_myorder_detail.xml
+++ b/app/src/main/res/layout/order_myorder_detail.xml
@@ -253,6 +253,7 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/order_myorder_divide"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
@@ -261,34 +262,30 @@
         </LinearLayout>
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_height="match_parent"
             android:padding="20dp"
-            android:weightSum="1"
             android:layout_below="@+id/my_order_info"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
+
+            <ImageButton
+                android:id="@+id/order_myorder_detail_cancel"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/fab_back_bg"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/fab_back" />
 
             <ImageButton
                 android:id="@+id/order_myorder_detail_phone"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:background="@drawable/fab_phone_bg"
+                android:layout_alignParentLeft="true"
                 android:src="@drawable/fab_phone" />
-
-            <ImageButton
-                android:id="@+id/order_myorder_detail_cancel"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="200dp"
-                android:layout_weight="0.08"
-                android:background="@drawable/fab_back_bg"
-                android:src="@drawable/fab_back" />
-
-
-        </LinearLayout>
+        </RelativeLayout>
 
 
     </RelativeLayout>
