--- a/app/src/main/res/layout/receive_order.xml
+++ b/app/src/main/res/layout/receive_order.xml
@@ -12,7 +12,8 @@
     <RelativeLayout
         android:id="@+id/receive_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="141dp"
+        android:background="@drawable/card_light">
 
 
         <LinearLayout
@@ -47,6 +48,7 @@
                             android:id="@+id/receive_item_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
                             android:layout_marginLeft="10dp"
                             android:text="来份烤肉拌饭"
                             android:textColor="@color/colorTex"
@@ -71,36 +73,52 @@
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/little_time" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/receive_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:text="20min/2017-5-7 19:00"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/receive_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/imageView2"
+                            android:layout_marginLeft="5dp"
+                            android:text="20min/2017-5-7 19:00"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
 
-                    <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginLeft="50dp"
-                        android:background="@drawable/little_money" />
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/little_time" />
 
-                    <TextView
-                        android:id="@+id/receive_money"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:text="5元"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:orientation="horizontal"
+                            android:layout_marginRight="10dp">
+
+                            <ImageView
+                                android:id="@+id/imageView"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:background="@drawable/little_money" />
+
+                            <TextView
+                                android:id="@+id/receive_money"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="5dp"
+                                android:text="5元"
+                                android:textColor="@color/colorTex"
+                                android:textSize="18sp" />
+
+                        </LinearLayout>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -108,47 +126,56 @@
                     android:id="@+id/view4"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:background="@color/colordevider"
-                    android:padding="16dp" />
+                    />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="3dp"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView13"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:background="@drawable/little_des" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/receive_shop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:text="下沉广场烤肉拌饭"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/receive_des"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/imageView3"
+                            android:layout_marginLeft="15dp"
+                            android:text="16号楼512"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
 
-                    <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginLeft="15dp"
-                        android:background="@drawable/little_toward" />
+                        <TextView
+                            android:id="@+id/receive_shop"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/imageView13"
+                            android:layout_marginLeft="5dp"
+                            android:text="下沉广场烤肉拌饭"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
 
-                    <TextView
-                        android:id="@+id/receive_des"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="15dp"
-                        android:text="16号楼512"
-                        android:textColor="@color/colorTex"
-                        android:textSize="18sp" />
+                        <ImageView
+                            android:id="@+id/imageView13"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:background="@drawable/little_des" />
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_toRightOf="@+id/receive_shop"
+                            android:background="@drawable/little_toward" />
+                    </RelativeLayout>
 
                 </LinearLayout>
 
